Added file upload and pdf file extract

--- a/Fetch_Meta_Data_App/templates/index.html
+++ b/Fetch_Meta_Data_App/templates/index.html
@@ -1,7 +1,7 @@
 <body>  
-    <form method="POST" class="post-form" enctype="multipart/form-data">  
+    <form method="POST" class="#" enctype="multipart/form-data">  
         {% csrf_token %}  
         {{ form.as_p }}  
-    <button type="submit" class="save btn btn-default">Save File</button>  
+    <button type="submit" class="#">Extract Meta Data</button>  
 </form>  
 </body> 
