--- a/account/templates/auth/login.html
+++ b/account/templates/auth/login.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
         <link rel="stylesheet" href="login.css">
         <title>Login</title>
     </head>
@@ -22,7 +23,10 @@
                 <label for="email">Email*</label>
                 <input type="email" name="email" placeholder="aladerofiah@gmail.com" required>
                 <label for="password">Password*</label>
-                <input type="password" name="password" placeholder="*******" required>
+                <div>
+                    <input type="password" name="password" placeholder="*******" id="password" required>
+                    <i class="bi bi-eye-slash" id="togglePassword"></i>
+                </div>
                 <p id="fpassword"><a href="./forgotten_password.html"> Forgot password?</a></p>
                 <input type="submit" value="Continue">
             </form>
@@ -31,6 +35,7 @@
         </div>
 
         <!-- <script src="/static/metadata/js/main.js"></script> -->
+        <script src="./login.js"></script>
     </body>
 
 </html>
