--- a/zuri-project-landing-page/style.css
+++ b/zuri-project-landing-page/style.css
@@ -29,6 +29,28 @@
 .image {
   background: transparent;
 }
+.link_btn_nav {
+  display: flex;
+  width: 15vw;
+  justify-content: space-around;
+}
+
+.allowed {
+  font-family: "Work Sans";
+  color: black;
+  font-size: 15px;
+  text-align: center;
+  padding: 0 20px;
+}
+
+.link_btn_nav a {
+  font-family: "Work Sans";
+  text-decoration: none;
+  color: white;
+}
+.nav_link:hover {
+  text-decoration: underline;
+}
 
 .logo_div {
   display: flex;
@@ -80,14 +102,17 @@
 }
 .login_btn {
   border: 1.5px white solid;
-  border-radius: 5px;
+  border-radius: 8px;
   background: transparent;
   font-family: "Work Sans";
   font-style: normal;
+  font-weight: 600;
   line-height: 10px;
   color: white;
   width: 10vw;
+  padding: 15px 0;
   font-weight: 700;
+  transition: 0.3s;
 }
 .login_btn:hover {
   background-color: white;
@@ -96,14 +121,15 @@
 }
 .signup_btn {
   border: 1.5px white solid;
-  border-radius: 5px;
+  border-radius: 8px;
   background: white;
   font-family: "Work Sans";
   font-style: normal;
   line-height: 32px;
-  font-weight: 700;
+  font-weight: 900;
   color: #023e8a;
   width: 10vw;
+  transition: 0.5s;
 }
 .signup_btn:hover {
   transform: scale(1.1);
@@ -164,8 +190,8 @@
 .upload_div {
   margin-top: -40px;
   display: flex;
-  width: 100%;
   flex-direction: column;
+  width: 100%;
 }
 .upload {
   text-decoration: none;
@@ -217,6 +243,9 @@ label {
   justify-content: center;
 }
 
+.trustees {
+  padding: 0 6vw;
+}
 .trusted_div {
   display: flex;
   flex-direction: column;
@@ -239,6 +268,7 @@ label {
 }
 .trusty_img {
   margin: 0 15px;
+  transform: scale(0.8);
 }
 .instructions {
   display: flex;
@@ -277,7 +307,6 @@ hr {
   justify-content: center;
   align-items: center;
   border-radius: 12px;
-  box-shadow: -1px 2px 4px #c9c9c9;
 }
 .blue_circle {
   width: 70px;
@@ -288,6 +317,24 @@ hr {
   justify-content: center;
   align-items: center;
 }
+
+.arrow-up {
+  transform: rotate(0deg);
+}
+/* .arrow-down {
+  animation-name: arrowMoveUp;
+  animation-duration: 1s;
+  transform: rotate(180deg);
+}
+
+@keyframes arrowMoveUp {
+  from {
+    transform: rotate(180deg);
+  }
+  to {
+    transform: rotate(0deg);
+  }
+} */
 .instruction_title {
   font-family: "Work Sans";
   font-style: normal;
@@ -310,7 +357,8 @@ hr {
 
 .testimonial_card {
   border: 1px solid rgb(194, 194, 194);
-  width: 18vw;
+  box-shadow: -1px 2px 4px #c9c9c9;
+  width: 220px;
   margin: 0 25px;
   border-radius: 4px;
 }
@@ -357,6 +405,13 @@ hr {
   margin: 5% 0;
 }
 
+.arrow-up {
+  transform: rotate(180deg);
+}
+
+.arrow-down {
+  transform: rotate(0deg);
+}
 .question-mark {
   position: relative;
   transform: scale(1.5);
@@ -395,6 +450,12 @@ hr {
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: 0.3s;
+}
+
+.question_hide:hover {
+  transform: scale(1.1);
+  cursor: pointer;
 }
 .question_paragragh {
   font-family: "Work Sans";
@@ -404,11 +465,263 @@ hr {
   color: #14191f;
   padding: 0 15vw 2vw 7vw;
   width: 90vw;
+  transform: scale(0);
+  opacity: 0;
+}
+
+.question_paragragh_show {
+  opacity: 1;
+  transform: scale(1);
+  animation-name: show;
+  animation-duration: 0.5s;
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    transform: scale(0);
+  }
+  to {
+    opacity: q1;
+    transform: scale(1);
+  }
 }
 .q-h-1 {
   margin-left: 5px;
 }
+
+.subscribe-heading {
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 35px;
+  line-height: 44px;
+  padding: 10% 0 2% 0;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  color: #023e8a;
+}
+
+.subscribe_input {
+  padding: 12px 20px;
+  width: 90%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+.subscribe_button {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  padding: 4px 0px 4px 4px;
+  gap: 2px;
+  width: 105px;
+  height: 40px;
+  border: none;
+  background: #2c5e9e;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+  color: white;
+  transition: 0.3s;
+}
+.subscribe_button:hover {
+  cursor: pointer;
+  background: #023e8a;
+}
+.sub_form_div {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.sub_form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 150%;
+}
+.subscribe {
+  flex-direction: column;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.footer_div {
+  background: #023e8a;
+  padding-bottom: 7%;
+  width: 98.7vw;
+  margin-top: 5%;
+  display: flex;
+
+  align-items: center;
+  justify-content: space-around;
+}
+.footer_title {
+  width: 110px;
+  height: 36px;
+  margin-left: 10px;
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 32px;
+  line-height: 35px;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+}
+.footer_logo {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  transform: translateY(-50px);
+  height: 55%;
+}
+.link_divs {
+  display: flex;
+  justify-content: space-between;
+  width: 30vw;
+}
+.link_div a {
+  display: block;
+  text-decoration: none;
+  font-family: "Work Sans";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 26px;
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+}
+.link {
+  margin: 30px;
+}
+.link:hover {
+  text-decoration: underline;
+}
+.socials {
+  display: flex;
+  width: 70%;
+
+  height: 4vh;
+  justify-content: space-between;
+  width: 15vw;
+}
+
+.copyright-div {
+  transform: translate(-68vw, 70px);
+
+  display: flex;
+  flex-direction: column;
+  height: 100px;
+}
+
+.socials_hr {
+  transform: translateY(60px);
+  position: absolute;
+  left: 10px;
+  height: 1px;
+  width: 90vw;
+  background-color: white;
+}
+.copyright {
+  font-family: "Work Sans";
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 30px;
+  padding-top: 70px;
+  height: 100px;
+  margin-left: 8px;
+}
+
 @media screen and (max-width: 800px) {
+  .allowed {
+    font-family: "Work Sans";
+    color: black;
+    font-size: 8.5px;
+  }
+  .copyright-div {
+    transform: translate(-10px, -20%);
+  }
+  .subscribe_button {
+    font-size: 12px;
+    padding: 16px;
+    width: 200%;
+  }
+  .link {
+    transform: scale(0.6);
+    margin: 0px;
+    width: 200%;
+  }
+
+  .socials {
+    margin-left: -50px;
+    margin-top: 20px;
+    width: 200px;
+    height: 0;
+  }
+  .socials a {
+    height: 0;
+  }
+  .socials_hr {
+    width: 50vw;
+    margin-left: -50px;
+    border-radius: 10px;
+    display: block;
+  }
+  .copyright {
+    font-family: "Inter";
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 18px;
+    display: flex;
+    align-items: left;
+    letter-spacing: 0.01em;
+    color: #f7f3f3;
+    margin-left: -40px;
+    margin-top: 20px;
+    display: block;
+  }
+  .link_divs {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    display: flex;
+    justify-content: space-between;
+
+    width: 88vw;
+    margin-left: -108px;
+  }
+  .footer_logo {
+    width: 0;
+    transform: scale(0.7);
+    padding-left: 10px;
+    margin-top: -60px;
+  }
+  .sub_form {
+    width: 95%;
+  }
+  .footer_div {
+    width: 100vw;
+    height: 40vh;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    padding: 20%;
+  }
+  .subscribe_input {
+    width: 150%;
+  }
+
+  .link_btn_nav {
+    display: none;
+  }
   .hero {
     flex-direction: column;
 
@@ -419,6 +732,11 @@ hr {
   .title {
     margin-left: 20px;
     margin-bottom: 20px;
+    transform: translateY(-30px);
+    font-size: 30px;
+    padding: 0 100px;
+    line-height: 50px;
+    text-align: center;
   }
 
   .hero {
@@ -428,13 +746,14 @@ hr {
   .subtitle {
     font-weight: 200;
     padding-left: 20px;
+    transform: translateY(-20px);
     margin-left: 20px;
-    padding-right: 20px;
-    font-size: 130%;
+    padding: 0 10px;
+    font-size: 100%;
   }
 
   .drop_section_outer {
-    margin-top: 40px;
+    margin-top: 20px;
     width: 85%;
     height: 40%;
   }
@@ -443,7 +762,6 @@ hr {
     margin-top: -40px;
   }
   .upload_div {
-    flex-direction: row;
     width: 100%;
     margin-top: -50px;
     align-items: center;
@@ -500,13 +818,29 @@ hr {
     width: 80%;
   }
   .trustees {
-    width: 350px;
-    overflow-x: scroll;
-    overflow-y: hidden;
-    white-space: nowrap;
+    max-width: 100vw;
+    transform: translateY(-90px);
+    justify-content: center;
+    width: 100vh;
+    display: flex;
+  }
+  .trusty_img {
+    width: 18vw;
+    margin: 0px;
+  }
+  .trusted_p {
+    margin-top: -40px;
+  }
+  .trusted_div {
+    margin-bottom: -140px;
+  }
+  .trust_hr {
+    display: none;
   }
   .instruction_heading {
     padding: 0 30px;
+    font-size: 22px;
+    line-height: 50px;
   }
   .instruction_cards {
     flex-direction: column;
@@ -514,10 +848,7 @@ hr {
   ::-webkit-scrollbar {
     display: none;
   }
-  .testimonial_card {
-    width: 75vw;
-    margin-top: 70px;
-  }
+
   .alex {
     margin-top: -10px;
   }
@@ -564,6 +895,34 @@ hr {
 
   .questions_heading {
     margin: 50px 0;
-    font-size: 200%;
+    font-size: 120%;
+  }
+
+  .subscribe-heading {
+    font-family: "Work Sans";
+    font-style: normal;
+    font-weight: 600;
+    font-size: 15px;
+
+    padding: 10% 0 2% 0;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    color: #023e8a;
+  }
+  .subscribe_button {
+    width: 50%;
+  }
+  .testimonial_cards {
+    overflow-x: scroll;
+
+    flex-direction: row;
+
+    width: 90vw;
+  }
+  .testimonial_card {
+    height: 300px;
+    margin: 0 20px;
+    min-width: 250px;
   }
 }
