--- a/account/templates/auth/login.css
+++ b/account/templates/auth/login.css
@@ -3,12 +3,13 @@
     margin: 0;
     box-sizing: border-box;
 }
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
 body{
     background: #FFFFFF;
     display: flex;
     align-items: center;
     height: 100vh;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family: 'Work Sans', sans-serif;
 }
 .flex{
     display: flex;
@@ -20,7 +21,12 @@ body{
     width: 50%;
     background: linear-gradient(41.43deg, #023E8A 36.6%, #2C5E9D 67.28%);
 }
-
+img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+}
 #form-div{
     width: 50%;
     height: 100vh;
@@ -37,7 +43,7 @@ h1{
     padding: 10px;
 }
 p{
-    font-weight: 500;
+    font-weight: 400;
     font-size: 20px;
     margin: 10px 0px; 
 }
@@ -47,32 +53,33 @@ label{
     margin: 10px 0px; 
 
 }
-input{
+input, button{
     padding: 0.6rem;
-    width: 300px;
+    width: 350px;
     margin: 0.4rem 0;
-    border: 1px solid #8A8C8F;
-    border-radius: 8px;
+    border: 1px solid #8A8C8F ;
+    border-radius: 8px !important;
     outline: none;
     /* width: 100%; */
 }
-/* input[type='text']:focus{
-    text-align:left;
-    } */
 input:focus{
-    border: 2px solid #8A8C8F;   
+    border: 1px solid black;
+    background-color: #e8e8e9ee;
 }
-input[type=submit]{
+input:focus::placeholder {
+    color: transparent;
+  }
+button{
     font-size: 20px;
     font-weight: 600;
     background-color: #023E8A;
     color: #FFFFFF;
-    transition: width .35s ease-in-out;
     cursor: pointer;
+    border: nonne;
 
 }
 
-#fpassword{
+#fpassword {
     text-align: right;
     margin-top: -3px;
     font-size: 12px;
@@ -102,18 +109,26 @@ input[type=submit]{
         flex-direction: column;
     }
     #logo-div{
-        background-color: #023E8A;
-        width: 100%;
-    }
-    img{
-        width: 185px;
+        display: none;
     }
     h1{
         margin: 10px ; 
         font-size: 24px;
     }
+    p{
+        font-size: 16px;
+        font-weight: 400;
+    }
     #form-div{
         width: 90%;
+        height: auto;
+    }
+    #form-div  .lp{
+        text-align: center;
+
+    }
+    input, button{
+        padding: 1rem;
     }
     p{
         width: 100%;
