--- a/account/templates/auth/login.html
+++ b/account/templates/auth/login.html
@@ -6,20 +6,21 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css"/>
+
         <link rel="stylesheet" href="login.css">
         <title>Login</title>
     </head>
 
     <body>
         <div id="logo-div" class="flex">
-                <img src="./asset/proto.png" alt="proto logo">
+                <img src="./asset/PROTO.png" alt="proto logo">
         </div>
         <div id="form-div" class="flex">
                 <h1>Welcome</h1>
-                <p>Login to your Fetch metadata account</p>
 
             <form action={% url 'account:login_api' %} method="post">
                 <!-- {% csrf_token %} -->
+                <p class="lp">Login to your PROTO account</p>
                 <label for="email">Email*</label>
                 <input type="email" name="email" placeholder="aladerofiah@gmail.com" required>
                 <label for="password">Password*</label>
@@ -28,7 +29,7 @@
                     <i class="bi bi-eye-slash" id="togglePassword"></i>
                 </div>
                 <p id="fpassword"><a href="./forgotten_password.html"> Forgot password?</a></p>
-                <input type="submit" value="Continue">
+                <button type="submit">Continue</button>
             </form>
             <p class="create-acct">Don't have an account? <a href="./register.html">Create an account</a></p>
 
